[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuan Chiang", email = "cyrusyc@lbl.gov" },
    {name = "Oliver Chou", email = "49494541+knhn1004@users.noreply.github.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "mp-api>=0.38.0",
    "openai>=1.12.0",
	"langchain-openai>=0.0.6",
    "langchain>=0.1.6",
    "langchainhub>=0.1.14",
    "pydantic>=2.6.1",
	"pydantic-settings>=2.1.0",
	"pydantic-core>=2.16.2",
    "numexpr",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "arxiv",
    "wikipedia",
    "pandas",
    "pypdf",
	"redis>=5.0.1,<5.1.0",
	"langchain-experimental==0.0.56"
]
requires-python = ">=3.9"

[options.extras_require]
mace = [
    "mace @ git+https://github.com/chiang-yuan/mace.git@universal"
]

[project.urls]
Homepage = "https://github.com/chiang-yuan/llamp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["llamp"]
exclude = []


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",      # pycodestyle
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "ISC",    # flake8-implicit-str-concat
    "PD",     # pandas-vet
    "SIM",    # flake8-simplify
    "SLOT",   # flake8-slots
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "UP",     # pyupgrade
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"
